# bc-robot-manipulation

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
results/: bc_policy.pth
ros2_ws/src/surgical_peg_transfer/: package.xml  setup.cfg  setup.py
ros2_ws/src/surgical_peg_transfer/config/: camera_params.yaml  planner_params.yaml  robot_params.yaml
ros2_ws/src/surgical_peg_transfer/launch/: full_system.launch.py  simulation_only.launch.py
ros2_ws/src/surgical_peg_transfer/surgical_peg_transfer/control/: arm_controller_node.py
ros2_ws/src/surgical_peg_transfer/surgical_peg_transfer/evaluation/: evaluation_node.py
ros2_ws/src/surgical_peg_transfer/surgical_peg_transfer/perception/: depth_perception_node.py  yolo_detection_node.py
ros2_ws/src/surgical_peg_transfer/surgical_peg_transfer/planning/: task_planner_node.py
ros2_ws/src/surgical_peg_transfer/urdf/: peg_board.urdf
ros2_ws/src/surgical_peg_transfer/worlds/: peg_transfer_world.world
scripts/: collect_demos.py  debug_controller.py  debug_expert.py  debug_phases.py  debug_policy.py  evaluate_bc.py  plot_loss.py  record_video.py  train_bc.py
